# ici-phd-rse-crash-course-scratch

./: .copier-answers.yml  .pre-commit-config.yaml  LICENCE  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements-docs-locked.txt  requirements-incl-optional-locked.txt  requirements-locked.txt  requirements-only-tests-locked.txt  requirements-only-tests-min-locked.txt  requirements-upstream-dev.txt
.github/workflows/: bump.yaml  ci.yaml  install-pypi.yaml  release.yaml
changelog/: README.md
docs/: NAVIGATION.md  development.md  gen_doc_stubs.py  installation.md
docs/further-background/: dependency-pinning-and-testing.md
docs/how-to-guides/: basic-calculation.md  run-code-in-a-notebook.py
scripts/: changelog-to-release-template.py  test-install.py
src/ici_phd_rse/: __init__.py  operations.py  unit_aware.py
tests/unit/: test_operations.py  test_unit_ops.py
